# SharedTaxi_RL_Environment

./: README.md  SharedTaxiv1.py  passenger.py  sharedtaxi.py  sharedtaxi_test.py  taxi.py
sales_agent/LenovoD365-SalesAI/: .dockerignore  .env.example  .gitignore  Dockerfile  azurepipeline.yml  email_templates.json  orchestrator_api.py  pyproject.toml  requirements.txt  serve.bat  sum.json
sales_agent/LenovoD365-SalesAI/agents/: _shared.py  schemas.py
sales_agent/LenovoD365-SalesAI/agents/analyst_agent/: agent.py  data.json
sales_agent/LenovoD365-SalesAI/agents/concept_agent/: agent.py  data.json
sales_agent/LenovoD365-SalesAI/agents/email_agent/: logger.py
sales_agent/LenovoD365-SalesAI/agents/email_refine_agent/: agent.py  logger.py
sales_agent/LenovoD365-SalesAI/agents/orchestrator/: agent.py
sales_agent/LenovoD365-SalesAI/agents/sales_agent/: agent.py  data.json
sales_agent/LenovoD365-SalesAI/agents/scheduler_agent/: agent.py  db_tool.py  graph_meeting_tool.py
sales_agent/LenovoD365-SalesAI/agents/summary_agent/: agent.py  logger.py
sales_agent/LenovoD365-SalesAI/agents/summary_workflow/: workflow.py
sales_agent/LenovoD365-SalesAI/api/: email_api.py  email_classifier_api.py  logger.py  sales_intel_api.py
sales_agent/LenovoD365-SalesAI/api/refine_api/: logger.py  refine_api.py
sales_agent/LenovoD365-SalesAI/api/refine_api/email_refine_agent/: agent.py
sales_agent/LenovoD365-SalesAI/api/sum_api/: logger.py  summary_api.py
sales_agent/LenovoD365-SalesAI/core/: envelope.py
sales_agent/LenovoD365-SalesAI/db/: session_store.py
(+309 files in other folders)
